# stdcpp-2

./: .clangd  .gitignore  Makefile  meson.build  test.cpp
.cache/clangd/index/: file.cpp.A4A4CBCBEA229669.idx  file.hpp.9EAAFD2C3D236746.idx  heap.cpp.13C7528DB83BDB76.idx  heap.hpp.F87E00CBC904890E.idx  libc.hpp.082C3EB4ABCDDF3C.idx  socket.cpp.7864BB4358FBEC0E.idx  socket.hpp.1C82C792B83668F8.idx
bin-src/: ls.c  syscall.c
examples/: is-dir.cpp  simple-server.cpp
include/: .clangd  file.hpp  fs.hpp  heap.hpp  libc.hpp  memory-arena.hpp  socket.hpp  string.hpp  syscall.h  test.hpp
include/c++/: heap.hpp  libc.hpp
src/: file.cpp  fs.cpp  heap.cpp  memory-arena.cpp  socket.cpp
tests/: .clangd  arena.cpp  custom-heap.cpp
